added login/register features

--- a/client/src/components/ImageCard/ImageCard.css
+++ b/client/src/components/ImageCard/ImageCard.css
@@ -10,8 +10,10 @@
     
 }
 
-.image-card:hover
- .image-card-content{
+.image-card-content {
+    display: none;
+}
+.image-card:hover .image-card-content{
     position: absolute;
     display: flex;
     flex-direction: column;
