--- a/client/src/components/Gallery/gallery.css
+++ b/client/src/components/Gallery/gallery.css
@@ -11,9 +11,11 @@ hr{
 }
 .table{
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     justify-content: space-between;
     margin-top: 5vh;
+    gap: 5vh;
 }
 .table>*{
     width: 30%;
