--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -8,12 +8,25 @@
     display: flex;
     height: 6vh;
     justify-content: space-between;
+    z-index: 5;
+    position:static;
+    width: 100%;
+    margin-left: auto;
+    overflow: hidden;
+}
+.navbar-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 button {
     background-color: var(--primary-color);
     color: var(--secondary-color);
     border: none;
     width: 5vw;
+    min-width: fit-content;
+    padding: 0.5rem 1rem;
     height: 70%;
     border-radius: 1rem;
     cursor: pointer;
@@ -21,4 +34,18 @@ button {
 a{
     color: var(--secondary-color);
     text-decoration: none;
+}
+.navbar ul{
+    display: flex;
+    flex-direction: row;
+    width: 30%;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+li{
+    list-style: none;
+
 }
