--- a/client/src/components/AddImage/AddImage.css
+++ b/client/src/components/AddImage/AddImage.css
@@ -16,6 +16,9 @@
     width: 50vw;
     background-color: var(--secondary-color);
     border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .relative{
     position: relative;
