--- a/client/src/components/AddImage/AddImage.css
+++ b/client/src/components/AddImage/AddImage.css
@@ -11,14 +11,23 @@
     align-items: center;
 }
 .add-image .table{
+    padding-top: 5px;
+    padding-bottom: 5px;
     position: absolute;
-    height: 50vh;
-    width: 50vw;
+    min-height: 50vh;
+    min-width: 50vw;
+    width: fit-content;
+    height: fit-content;
     background-color: var(--secondary-color);
     border-radius: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+
+}
+.add-image .table img{
+    max-height: 25vh;
+    
 }
 .relative{
     position: relative;
